Fix the build in JDK8